--- a/render.yaml
+++ b/render.yaml
@@ -9,9 +9,10 @@ services:
       pip install -r requirements.txt
 
     startCommand: |
-      Xvfb :99 -screen 0 1280x720x16 &
-      export DISPLAY=:99
-      gunicorn -b 0.0.0.0:10000 app:app
+  Xvfb :99 -screen 0 1280x720x16 -ac &
+  export DISPLAY=:99
+  gunicorn -b 0.0.0.0:10000 app:app
+
 
     autoDeploy: true
     envVars:
