--- a/requirements.txt
+++ b/requirements.txt
@@ -34,7 +34,7 @@ ml-dtypes==0.5.1
     # via
     #   jax
     #   jaxlib
-mouseinfo==0.1.3
+keyboard
     # via pyautogui
 numpy==1.26.4
     # via
@@ -62,7 +62,7 @@ pillow==11.1.0
     #   pyscreeze
 protobuf==4.25.6
     # via mediapipe
-pyautogui==0.9.54
+pynput
     # via -r requirements.in
 pycparser==2.22
     # via cffi
